fix megamenu z-index

--- a/src/sass/_megamenu.scss
+++ b/src/sass/_megamenu.scss
@@ -7,6 +7,7 @@
   bottom: 0;
   background-color: inherit;
   flex-direction: column;
+  z-index: $zindex-modal;
 }
 
 .megamenu-header {
